print from browser layout issues solved, including logo

--- a/ecolex/static/bootstrap/less/details.less
+++ b/ecolex/static/bootstrap/less/details.less
@@ -1,3 +1,8 @@
+
+
+
+
+
 .html-disclaimer {
   font-size: @font-size-smaller;
   font-style: italic;
@@ -99,7 +104,21 @@
   }
 }
 
+/*tabel rezolvat pentru print */
+
+
 .participants {
+  @media print {
+    .table;
+    .table-bordered;
+
+
+
+    // margin: auto!important;
+    // width: auto!important;
+  }
+  @media not print {
+
   @cell-padding-vertical: @padding-base-vertical;
   @cell-padding-horizontal: @padding-base-horizontal;
 
@@ -358,3 +377,9 @@
     margin-right: (-@grid-gutter-width / 2);
   }
 }
+
+
+  }
+
+
+
