--- a/ecolex/static/bootstrap/less/print.less
+++ b/ecolex/static/bootstrap/less/print.less
@@ -18,10 +18,18 @@
     a,
     a:visited {
         text-decoration: underline;
+        white-space: normal !important;
+text-align: left !important;
     }
 
     a[href]:after {
         content: " (" attr(href) ")";
+       
+    }
+    a:after{
+         word-break:break-all;
+         border-bottom:1px dotted;
+         color:blue !important;
     }
 
     abbr[title]:after {
@@ -102,6 +110,56 @@
             border: 1px solid #ddd !important;
         }
     }
+     .tag{
 
+border: 1px dotted;
+
+  }
+
+.search-form {
+  display:none;
+}
+
+#mahead{
+  display:none!important;
+}
+
+#site-footer{
+
+  display: none!important;
+}
+
+#participants-extras{
+
+    display:none!important;
+}
+
+#participants-map{
+    display:none!important;
+
+}
+
+.logo-ecolex{
+    display:none!important;
+}
+
+.search-form{
+    display:none!important;
+
+}
+
+.slogan{
+position: relative!important; top: -15px!important;
+}
+
+.jumbotron-brand:before{
+    content: url(http://i.imgur.com/UJVo1Ae.png);
+    // background-size: 10px;
+}
+
+#filters{
+    display:none!important;
+    // position:absolute!important;
+}
     // Bootstrap specific changes end
 }
